locust-k8s/overlays/local/patches.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: locust-worker
spec:
  replicas: 2
