locust-k8s/overlays/local/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: locust
  labels:
    name: locust
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: locust.locust-local.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: locust-master
          servicePort: 8089
